--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.554.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "next": "^15.5.7",
     "react": "19.1.0",
     "react-day-picker": "^9.13.2",
